--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/MATCreditDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/MATCreditDetails.cshtml
@@ -86,6 +86,13 @@
             $("#sectionDiv").html('');
         }
 
+        function isANumber(evt) {
+            var charCode = (evt.which) ? evt.which : evt.keyCode
+            if (charCode == 45 || charCode == 46 || (charCode >= 48 && charCode <= 57))
+                return true;
+            return false;
+        }
+
         function loadMATCreditDetailsData() {
             $.ajax({
                 url: '/TaxReturn/MATCreditDetailsData?fyayId=' + $('#FYAYId').val()
