--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -55,10 +55,10 @@
                         @Html.Partial("_LitigationDD", Model.ITSectionListSource)                        
                     </th>
                     <th>
-                        <button type="button" class="btn btn-primary btn-sm btn-search"
+                        @*<button type="button" class="btn btn-primary btn-sm btn-search"
                                 id="btnsrch">
                             Search
-                        </button>
+                        </button>*@
                         <button type="button" class="btn btn-primary btn-sm btn-reset" id="btnreset">
                             Reset
                         </button>
