--- a/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
@@ -10,27 +10,61 @@
 </style>
 <h3>Company Dashboard for @Model.CompanyObject.CompanyName</h3>
 
-<div class="demo-section k-content wide">
-	<div id="chartCTR"></div>
-</div>
+<table class="table table-hover">
+	<thead>
+		<tr>
+			<th>Index</th>
+			<th>Report</th>
+			<th>Category</th>
+		</tr>	
+	</thead>
+	<tbody>
+		<tr class="table-active">
+			<td>a)</td>
+			<td> @Html.ActionLink("Litigation management - filing deadlines", "Charts",new { chartId = 1 }, null)</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>b)</td>
+			<td> @Html.ActionLink("Statement of tax related disclosure", "Charts", new { chartId = 2 }, null)</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>c)</td>
+			<td>ETR analysis</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>d)</td>
+			<td>Discharge of tax liability</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>e)</td>
+			<td>Return filing compliance</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>f)</td>
+			<td>Key issues and trends</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>g)</td>
+			<td>Working capital lock up</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>h)</td>
+			<td>Group summary</td>
+			<td>- User category to be defined</td>
+		</tr>
+		<tr class="table-active">
+			<td>i)</td>
+			<td>Company summary</td>
+			<td>- User category to be defined</td>
+		</tr>
+	</tbody>
+</table>
 
-@section scripts
-{
-	<link rel="stylesheet" href="@Url.Content("~/Content/KendoUI/kendo.common.min.css")" />
-	<link rel="stylesheet" href="@Url.Content("~/Content/KendoUI/kendo.default.min.css")" />
-	<script src="@Url.Content("~/Content/KendoUI/kendo.all.min.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Scripts/companyDashboard.js")" type="text/javascript"></script>
 
-	<script>
-		var companyId = @Model.CompanyObject.Id;
-		$(document).ready(function () {
-			if (window.chartFunctions !== undefined && window.chartFunctions.length > 0) {
-				$.each(window.chartFunctions, (idx, fn) => {
-					if (fn) {
-						fn.apply();
-					}
-				});
-			}
-		});		
-	</script>
-}
