New chart => Quarterly Advance Tax added

--- a/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
@@ -31,7 +31,7 @@
 		</tr>
 		<tr class="table-active">
 			<td>c)</td>
-			<td>ETR analysis</td>
+			<td> @Html.ActionLink("ETR analysis", "Charts", new { chartId = 3 }, null)</td>
 			<td>- User category to be defined</td>
 		</tr>
 		<tr class="table-active">
