New chart => Tax liability chart added

--- a/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
@@ -36,7 +36,7 @@
 		</tr>
 		<tr class="table-active">
 			<td>d)</td>
-			<td>Discharge of tax liability</td>
+			<td> @Html.ActionLink("Discharge of tax liability", "Charts", new { chartId = 4 }, null)</td>
 			<td>- User category to be defined</td>
 		</tr>
 		<tr class="table-active">
