Three new charts added

--- a/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Charts.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Charts.cshtml
@@ -5,7 +5,7 @@
 }
 
 <br />
-@if (Model.ChartId == 2 || Model.ChartId == 3 || Model.ChartId == 4)
+@if (Model.ChartId != 1)
 {
 	<div class="text-center">
 		<label>Select No Of Years: </label>
