--- a/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/CompanyDashboard/Index.cshtml
@@ -41,17 +41,17 @@
 		</tr>
 		<tr class="table-active">
 			<td>e)</td>
-			<td>Return filing compliance</td>
+			<td> @Html.ActionLink("Return filing compliance", "Charts", new { chartId = 5 }, null)</td>
 			<td>- User category to be defined</td>
 		</tr>
 		<tr class="table-active">
 			<td>f)</td>
-			<td>Key issues and trends</td>
+			<td> @Html.ActionLink("Key issues and trends", "Charts", new { chartId = 6 }, null)</td>
 			<td>- User category to be defined</td>
 		</tr>
 		<tr class="table-active">
 			<td>g)</td>
-			<td>Working capital lock up</td>
+			<td> @Html.ActionLink("Working capital lock up", "Charts", new { chartId = 7 }, null)</td>
 			<td>- User category to be defined</td>
 		</tr>
 		<tr class="table-active">
