fixed the save issue in it return details

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/GetITReturnDetails.cshtml
@@ -33,6 +33,8 @@
                                     , new ITHeadMaster()
                                     , new ITReturnDetails()
                                     , new List<DocumentCategoryMaster>()
+                                    , new List<SubDocumentCategoryMaster>()
+                                    , true
                                  )
                     )
                 </td>
