Fixed the issue in it return reload on fy ay dropdown

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -113,6 +113,7 @@
         $(document).ready(function () {            
             $("#FYAYId").change(function () {
                 loadAssessmentYear();
+                loadITReturnDetailsData();
             });                  
             $("#FYAYId").val('@(Model.FYAYId.HasValue ? Model.FYAYId.Value.ToString() :"1")');
             loadAssessmentYear();
